@@ -11,9 +11,7 @@ license = "AGPL-3.0-or-later"
 regex = "0.2"
 rocket = "0.4.0"
 rocket_codegen = "*"
-diesel = { version = "1.0", features = ["postgres"] }
-r2d2-diesel = "1.0"
-r2d2 = "0.8"
+diesel = { version = "1.4.1", features = ["postgres", "r2d2"] }
 dotenv = "0.10"
 serde = "1.0"
 serde_derive = "1.0"
