@@ -1,0 +1,4 @@
+DROP TABLE IF EXISTS messages;
+DROP SEQUENCE IF EXISTS messages_id_seq;
+DROP TYPE IF EXISTS log_level;
+DROP TYPE log_format;
