@@ -1,1 +1,2 @@
+pub mod message;
 pub mod user;
