@@ -3,6 +3,10 @@ type ID = usize;
 #[derive(Deserialize)]
 pub struct Message {
     pub id: Option<ID>,
+    pub code: Option<String>,
+    pub lang: Option<String>,
+    pub level: Option<String>,
+    pub format: Option<String>,
     pub title: String,
-    pub description: Option<String>,
+    pub content: Option<String>,
 }
